[package]
name = "temp-converter"
description = "Temperature converter ( °C / °F / K ) "
version = "0.2.0"
authors = ["Rinrin.rs"]
license = "[GPL-3.0] GNU General Public License v3.0"
repository = "https://github.com/Rinrin0413/temp-converter"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logics = { path = "./logics/" }